--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <a href="RSM.pdf" download class="button">Download My Resume</a>
+    <a href="RES.pdf" download class="button">Download My Resume</a>
   </section>
 
   <section id="contact">
